
	* More fine-grained completion settings in preferences dialog
	* Configurable completion popup delay
	* Separate preferences into additional tabs

2018-06-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Completion modes (for different levels of suggestions)
	* "Keep open" option for insert function dialogs
	* Hide "Insert Emoji" expression context menu item

2018-06-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Prefix completion suggestions and prefix handling in unit completion suggestions

2018-05-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not enable OK button until values have changed, when editing definitions

2018-05-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* "to base #" conversion

2018-05-29 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add duodecimal base and Roman numerals to number base conversion dialog

2018-05-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Calendar conversion
	* Add "to" conversion for display of numbers in roman, sexagesimal, or time format
	* Completion suggestions for "to"-commands

2018-05-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Partial fraction expansion

2018-05-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Match title (and country for currencies) in completion suggestion list
	* Show currency flag in result when currency code is used

2018-05-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Search box for functions, variables, units, and long unit conversion lists
	* Context menu for conversion unit list, and middle click for add to expression
	* Use a searchable list view for convert to selection in unit manager

2018-04-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Flags for currencies (flags collected by majumeke)

2018-04-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix set (optimal) prefix when result is converted to composite unit (with prefix)

2018-04-09 Hanna Knutsson <hanna.knutsson@protonmail.com>
