@@ -10,6 +10,15 @@
 	* "Keep open" option for insert function dialogs
 	* Hide "Insert Emoji" expression context menu item
 
+2018-06-20 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Do not retrieve exchange rates not needed
+	* Focus plot expression entry after graph added, modified or removed
+
+2018-06-13 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Show currency flag also when symbol (instead of ISO code) is used. The flag is placed after number if the currency is placed in front of the number with no space inbetween.
+
 2018-06-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Prefix completion suggestions and prefix handling in unit completion suggestions
